--- a/src/ui/AnimatedGrid.scss
+++ b/src/ui/AnimatedGrid.scss
@@ -1,7 +1,13 @@
 .animated-grid {
-    list-style: none;
-    padding: 0;
-    margin: 0 auto;
+
+    display: block;
+    width: 100%;
+
+    & > div {
+        list-style: none;
+        padding: 0;
+        margin: 0 auto;
+    }
 
     * {
         line-height: 1;
